# aula19_bootcamp_python

./: dockerfile  main.py  pyproject.toml  rascunho.py  schema.py  test.db
